--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 MentOS
 limine-barebones
+limine-dev
 *.hdd
 *.hdd.lock
 *.bin
+v4-getting-into-proteced-mode/err.log
+v4-getting-into-proteced-mode/serial.log
